<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="181dp"
    tools:context="com.example.zasha.ejerciciosclase.GridLayout">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button36"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button37"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button38"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button39"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:background="@color/colorAccent"
            android:text="@string/_dividir" />

        <Button
            android:id="@+id/button40"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button41"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button45"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_punto" />

        <Button
            android:id="@+id/button46"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button47"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button48"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button49"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button50"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:background="@color/colorAccent"
            android:text="@string/_multiplicar" />

        <Button
            android:id="@+id/button51"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button52"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:background="@color/colorAccent"
            android:text="@string/_restar" />

        <Button
            android:id="@+id/button53"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/_igual" />

        <Button
            android:id="@+id/button54"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="3"
            android:background="@color/colorAccent"
            android:text="@string/_sumar" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>
