<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zasha.ejerciciosclase.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="8dp"
            android:text="@string/javier_usero_zarco"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_RelativeLayout"
            android:text="@string/_1_relative_layout" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_TableLayout"
            android:text="@string/_2_table_layout" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_LinearLayout"
            android:text="@string/_3_linear_layout" />

        <Button
            android:id="@+id/button13"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_GridLayout"
            android:text="@string/_4_grid_layout" />

        <Button
            android:id="@+id/button14"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_ConstraintLayout"
            android:text="@string/_5_ejercicio_de_constraint_layout" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_Main3EnRaya"
            android:text="@string/_6_controles_personalizados_3_en_raya" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
